fix of login form clipping

--- a/styles/login.less
+++ b/styles/login.less
@@ -1,8 +1,12 @@
 .LoginLayout {
+	height: auto !important;
+	min-height: 100%;
+	
 	text-align: center;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-shrink: 0;
 	
 	//workaround for show background only on login screen
 	html.mobile & {
